Fixed bar overflow

--- a/webapp/src/main/webapp/skin/onlyoffice.css
+++ b/webapp/src/main/webapp/skin/onlyoffice.css
@@ -74,7 +74,7 @@
 .onlyofficeEditorBody  #editor-top-bar #save-btn {
   display: inline-block;
   cursor: pointer;
-  margin-right: 30px;
+  margin-right: 25px;
 }
 
 .onlyofficeEditorBody  #editor-top-bar .close-btn {
@@ -85,7 +85,7 @@
 }
 
 .onlyofficeEditorBody #editor-top-bar .document-path {
-  padding-right: 10px;
+  padding-right: 5px;
 }
 
 .onlyofficeEditorBody .RightBodyTDContainer {
